[package]
name = "gtfs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono-tz = { version = "0.8.2", features = ["serde"] }
chrono = { version = "0.4.24" }
language-tags = { version = "0.3.2", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
csv = "1.2.2"
anyhow = "1.0.71"
serde_repr = "0.1.12"
